--- a/index.html
+++ b/index.html
@@ -1,104 +1,136 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Login | Attendance Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: 'Courier New', monospace;
-      background-color: #1e1e1e;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    body {
+      height: 100vh;
+      background: linear-gradient(135deg, #141e30, #243b55);
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
       color: white;
+      overflow: hidden;
     }
 
     .marquee {
+      position: absolute;
+      top: 0;
       width: 100%;
-      background: #222;
-      color: yellow;
-      padding: 8px;
-      font-size: 14px;
-      overflow: hidden;
+      background-color: #ffc107;
+      color: #000;
+      padding: 10px;
+      font-weight: bold;
+      text-align: center;
       white-space: nowrap;
-      box-sizing: border-box;
+      overflow: hidden;
+      animation: marquee 12s linear infinite;
+    }
+
+    @keyframes marquee {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
     }
 
     .login-box {
-      background: #2c2c2c;
-      padding: 30px 40px;
-      border-radius: 10px;
-      border: 2px solid #00bfff;
-      box-shadow: 0 0 20px rgba(0, 191, 255, 0.4);
-      text-align: center;
-      max-width: 350px;
+      background: rgba(0, 0, 0, 0.75);
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 0 30px rgba(0, 191, 255, 0.5);
       width: 100%;
+      max-width: 380px;
+      text-align: center;
     }
 
     .main-heading {
-      font-size: 28px;
-      color: #00bfff;
+      font-size: 30px;
       margin-bottom: 10px;
+      color: #00bfff;
     }
 
     .sub-heading {
       font-size: 18px;
-      color: #fff;
+      margin-bottom: 30px;
+      color: #ccc;
+    }
+
+    .input-group {
+      position: relative;
       margin-bottom: 20px;
     }
 
-    input[type="text"],
-    input[type="password"] {
-      width: 90%;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 6px;
+    .input-group input {
+      width: 100%;
+      padding: 12px 40px 12px 15px;
       border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      background: #333;
+      color: #fff;
       outline: none;
-      font-size: 15px;
+    }
+
+    .input-group i {
+      position: absolute;
+      right: 15px;
+      top: 50%;
+      transform: translateY(-50%);
+      color: #00bfff;
     }
 
     button {
       width: 100%;
-      padding: 10px;
-      background-color: #00bfff;
+      padding: 12px;
       border: none;
       border-radius: 6px;
+      background-color: #00bfff;
       color: white;
-      font-weight: bold;
       font-size: 16px;
+      font-weight: bold;
       cursor: pointer;
-      transition: 0.3s;
+      transition: background-color 0.3s ease;
     }
 
     button:hover {
-      background-color: #0099cc;
+      background-color: #007acc;
     }
 
     .error-text {
-      color: red;
-      margin-top: 10px;
+      color: #ff4d4d;
+      margin-top: 15px;
       font-size: 14px;
     }
   </style>
 </head>
 <body>
+
   <div class="marquee">PLEASE GIVE YOUR LOGIN CREDENTIALS</div>
 
   <div class="login-box">
     <h1 class="main-heading">WELCOME</h1>
     <h2 class="sub-heading">ATTENDANCE PORTAL</h2>
     <form onsubmit="return checkLogin()">
-      <input type="text" id="username" placeholder="Enter Username" required /><br />
-      <input type="password" id="password" placeholder="Enter Password" required /><br />
+      <div class="input-group">
+        <input type="text" id="username" placeholder="Enter Username" required />
+        <i class="fa fa-user"></i>
+      </div>
+      <div class="input-group">
+        <input type="password" id="password" placeholder="Enter Password" required />
+        <i class="fa fa-lock"></i>
+      </div>
       <button type="submit">Login</button>
+      <p id="error" class="error-text"></p>
     </form>
-    <p id="error" class="error-text"></p>
   </div>
 
   <script>
@@ -116,10 +148,11 @@
         }
         return false;
       } else {
-        error.innerText = 'Invalid credentials. Try again.';
+        error.innerText = '❌ Invalid credentials. Try again.';
         return false;
       }
     }
   </script>
+
 </body>
 </html>
