--- a/admin.html
+++ b/admin.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
    <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
@@ -113,7 +113,7 @@
     }
   </style>
 </head>
-<body onload="showSection('attendanceSection')">
+<body>
   <div class="sidebar" id="sidebar">
     <button class="menu-toggle" onclick="toggleMenu()">☰ MENU</button>
     <button onclick="showSection('hubSection')">🏢 Manage HUB & Checkpost</button>
